Panopoly Core 7.x-1.18, 2015-02-26
---------------------------
- Update to Entity API 1.6 for SA-CONTRIB-2015-053.
- Failing to download 'panopoly_demo' when installing via 'drush si': "Downloading updates failed:Failed to download from ".
- Update to Migrate 2.7.

Panopoly Core 7.x-1.17, 2015-02-18
---------------------------
- No changes since last release.

Panopoly Core 7.x-1.16, 2015-02-12
---------------------------
- Update Views to version 3.10 for SA-CONTRIB-2015-039.
- Allow users to search for content added to a node via Panelizer.
- Notice: Undefined variable: id in ctools_argument_entity_id_context() (line 73 of /prj/ctools/plugins/arguments/entity_id.inc).
- Warning: Illegal offset type in views_add_contextual_links() (line 816 of ~/prj/panopoly/panopoly/modules/contrib/views/views.module).
- Update to Panels 3.5 and Ctools 1.6.
- Widget 'title' isn't shown admin pages for Fieldable Panel Panes.
- Revert "Issue #2312827 by dsnopek: Widget 'title' isn't shown admin pages for Fieldable Panel Panes".
- Widget 'title' isn't shown admin pages for Fieldable Panel Panes.
- Update to features 2.3.

Panopoly Core 7.x-1.15, 2015-01-12
---------------------------
- Update to CTools 1.5

Panopoly Core 7.x-1.14, 2014-11-19
---------------------------
- Update to apps beta20.
- Have Panopoly Theme depend on Radix Layouts (rather than providing it's own).
- Fixed views_autocomplete_filters 'dependent' feature doesn't work in Pane settings.
- Fixed Patch needed to Views Bulk Operations (VBO).
- Update distro_update to version 1.0-beta4.
- Update 'link' module to version 1.3.
- Consider CTools modal resize patch (#2055785) for inclusion in Panopoly?.
- Fixed Strict warning: Only variables should be passed by reference in apps_retrieve_app_image().

Panopoly Core 7.x-1.13, 2014-10-17
---------------------------
- No changes since last release.

Panopoly Core 7.x-1.12, 2014-10-15
---------------------------