@@ -1,4 +1,0 @@
-The following patches have been applied to this project:
-- https://www.drupal.org/files/issues/panopoly_core-remove-makefile.patch
-
-This file was automatically generated by Drush Make (http://drupal.org/project/drush).
