@@ -72,9 +72,9 @@ features[variable][] = panelizer_taxonomy_term:panopoly_categories_allowed_layou
 features[variable][] = panelizer_taxonomy_term:panopoly_categories_allowed_types_default
 features[views_view][] = panopoly_taxonomy
 
-; Information added by Drupal.org packaging script on 2015-02-26
-version = "7.x-1.18"
+; Information added by Drupal.org packaging script on 2015-03-18
+version = "7.x-1.19"
 core = "7.x"
 project = "panopoly_core"
-datestamp = "1424987284"
+datestamp = "1426716518"
 
