@@ -13,6 +13,8 @@ dependencies[] = image
 dependencies[] = link
 dependencies[] = list
 dependencies[] = media
+dependencies[] = media_vimeo
+dependencies[] = media_youtube
 dependencies[] = menu_block
 dependencies[] = number
 dependencies[] = options
@@ -114,9 +116,9 @@ features[file_display][] = video__teaser__media_youtube_image
 features[file_display][] = video__teaser__media_youtube_video
 features[views_view][] = panopoly_widgets_general_content
 
-; Information added by Drupal.org packaging script on 2015-02-26
-version = "7.x-1.18"
+; Information added by Drupal.org packaging script on 2015-03-18
+version = "7.x-1.19"
 core = "7.x"
 project = "panopoly_widgets"
-datestamp = "1424987610"
+datestamp = "1426717107"
 
